Changes to Version 1.9-6

  o Small fixes.

Changes to Version 1.9-5

  o R logo now replaces Tk logo on non-Windows as well as Windows platforms (with help of Milan Bouchet-Valet).

  o Faster opening of dialog windows under Windows (consequence of above).

  o Fix for Mac OS X bug in auto-load of missing dependencies on initial start-up (reported by Pablo Serrano).

Changes to Version 1.9-4

  o Introduced RcmdrEnv.on.path option for plug-in packages that don't conform to the new rules.

  o Bug fixes to some dialogs that didn't work properly when RcmdrEnv not on path (reported by Kristian Hovde Liland).

Changes to Version 1.9-3

  o Fixed one- and multi-way ANOVA so that observation statistics can be saved (bug reported by Pedro Alberto Barbetta).

  o New quit.R.on.close Rcmdr option (suggested by Milan Bouchet-Valat).

  o Fix to Rcmdr display font to improve appearance on some Macs (suggested by Milan Bouchet-Valat).

  o Modified start-up so that Commander window doesn't open twice when a plug-in is loaded via library() (adapting a suggestion by Milan Bouchet-Valat).

  o Various low-level changes for compatability with R devel (R 2.16.0).

  o Updated French translation (courtesy of Milan Bouchet-Valat).

  o Plug-in packages now can specify models via the RcmdrModels: field in the DESCRIPTION file in preference to the Models: field (request of Brian Ripley).

  o Small interface and documentation tweaks and bug fixes.

Changes to Version 1.9-2

  o Updated Korean translation and getting-started document (thanks to Shin Jong-Hwa).

  o Updated Japanese getting-started document (thanks to Takaharu Araki).

  o Better icons for dialog buttons, new option to suppress these icons, other interface tweaks (after suggestions of Milan Bouchet-Valat).

  o Small fixes.

Changes to Version 1.9-1

  o Updated version of Getting Started With the R Commander.

  o Updated Italian translation (thanks to Stefano Calza).
